FreeST/test/Programs/InvalidTests/Typing/dataTypeMismatch/dataTypeMismatch.fst
data IntList = Nil | Cons Int IntList

b : Bool
b = Cons 4 Nil
